--- a/actividad5/punto1/index.html
+++ b/actividad5/punto1/index.html
@@ -16,6 +16,10 @@
         <p><h1><strong>dl</strong></h1></p>
         <p><em>Representa una lista descriptiva. El elemento encierra una lista de grupos de términos.</em></p>
         
+        <figure>
+            <img src="sources\dl.png" alt="Una representación de como se ve la etiqueta dl" >
+        </figure>
+        <figcaption><strong><em>Imagen tomada de mozilla</em></strong></figcaption>
     </section>
 </body>
 </html>
