--- a/actividad5/punto2/index.html
+++ b/actividad5/punto2/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocina</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="autor" content="Kevin Rodríguez Teomtzi">
+  <meta name="description" content="Pasos para un mole dce olla deliioso.">
+  <title>Mole de olla</title>
+  <link rel="shortcut icon" href="icons\favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <header>
+    <h1><p>Receta para el Mole de olla</p></h1>
+  </header> 
+  
 </body>
 </html>
