--- a/actividad5/punto2/index.html
+++ b/actividad5/punto2/index.html
@@ -14,6 +14,32 @@
   <header>
     <h1><p>Receta para el Mole de olla</p></h1>
   </header> 
-  
+  <p>Este Mole de olla no puede faltar en tu recetario. Aprende a hacer la receta de la abuela de manera fácil, rápida y sobre todo, deliciosa.</p>
+  <h3><p>Ingredientes PARA 4 PERSONAS</p></h3>
+  <ol>
+    <li>
+      <h2><p>Ingredientes</p></h2>
+      <ol>
+        <li>
+          <p>GENERALES</p>
+          <ul>
+            <li>1/2 kg Chambarete , en trozos</li>
+            <li>1/2 kg Retazo de res , en trozos</li>
+            <li>2 Huesos de tuétano</li>
+            <li>1/2 Cebolla</li>
+            <li>1/2 cabeza de ajos</li>
+            <li>2 Elotes , cortados en cuartos</li>
+            <li>2 xoconostles , sin piel y sin semillas y cortados en sextos</li>
+            <li>1 Chayote , pelado y en cubos medianos</li>
+            <li>200 gr Elotes , en tercios</li>
+            <li>1 Papa grande, en cubos medianos</li>
+            <li>1 Calabaza grande, en medias lunas</li>
+            <li>2 zanhorias , en medias lunas</li> 
+          </ul>
+        </li>
+      </ol>
+    </li>
+  </ol>
+
 </body>
 </html>
