--- a/actividad5/punto2/index.html
+++ b/actividad5/punto2/index.html
@@ -21,7 +21,7 @@
       <h2><p>Ingredientes</p></h2>
       <ol>
         <li>
-          <p>GENERALES</p>
+          <h3><p>GENERALES</p></h3>
           <ul>
             <li>1/2 kg Chambarete , en trozos</li>
             <li>1/2 kg Retazo de res , en trozos</li>
@@ -35,6 +35,59 @@
             <li>1 Papa grande, en cubos medianos</li>
             <li>1 Calabaza grande, en medias lunas</li>
             <li>2 zanhorias , en medias lunas</li> 
+          </ul>
+        </li>
+        <li>
+          <h3><p>PARA LA SALSA</p></h3>
+          <ul>
+            <li>1/4 Cebolla</li>
+            <li>2 dientes Ajos</li>
+            <li>2 Chiles ancho , desvenados y sin semillas</li>
+            <li>1 Chile pasilla , desvenado y sin semillas</li>
+            <li>2 Chiles guajillo , desvenados y sin semillas</li>
+            <li>3 jitomates , en mitades</li>
+            <li>3 cucharadas Aceite</li>
+            <li>2 ramas Epazote</li>
+          </ul>
+        </li>
+        <li>
+          <h3><p>PARA LOS CHAYOTES</p></h3>
+          <ul>
+            <li>200 gr Masa de maíz</li>
+            <li>1 cucharadita Aceite</li>
+            <li>1 cucharada Epazote finamente picado</li>
+            <li>Sal al gusto</li>
+          </ul>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <h2><p>PROCEDIMIENTO</p></h2>
+      <ol>
+        <li>
+          <h3>COMIENZA</h3>
+          <ul>
+            <li>COLOCA la carne, la cebolla y cubre con agua. Añade sal y cocina por 30 minutos en una olla de presión a partir de que suelte vapor.</li>
+            <li>RETIRA la cebolla y los ajos. Añade los elotes y el xoconostle. Cocina por 20 minutos.</li>
+          </ul>
+        </li>
+        <li>
+          <h3>PARA LA SALSA</h3>
+          <ul>
+            <li>CALIENTA aceite en una cacerola y acitrona la cebolla y el ajo.</li>
+            <li>AÑADE los chiles y cocina sin dejar de mover hasta que se doren. Agrega el jitomate y cocina por 10 minutos.</li>
+            <li>VIERTE un poco de agua y sal. Tapa y cocina por 10 minutos, deja enfriar.</li>
+            <li>LICÚA y cuela. Sofríe en una cacerola y reserva.</li>
+          </ul>
+        </li>
+        <li>
+          <h3>PARA LOS CHOCHOYOTES</h3>
+          <ul>
+            <li>MEZCLA la masa de maíz con el aceite, epazote y sal. Mezcla y forma bolitas de 2 centímetros.</li>
+            <li>HAZ un hueco con la yema de tu dedo, como si fuera una cazuelita. Reserva.</li>
+            <li>VIERTE la salsa al caldo y mezcla. Agrega las ramas de epazote y sazona de nuevo.</li>
+            <li>AÑADE los chayotes y las papas. Cocina por 8 minutos. Agrega los ejotes y zanahorias.</li>
+            <li>TAPA y cocina por 10 minutos más. Agrega los chochoyotes y cocina por 10 minutos o hasta que todo esté cocido.</li>
           </ul>
         </li>
       </ol>
