--- a/burgety/index.html
+++ b/burgety/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="es-MX">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburguesas ¡Burgety!</title>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!--El autor de la pagina-->
+  <meta name="author" content="Kevin Rodríguez Teomitzi"/>
+  <!--Descripción de nuestra página-->
+  <meta name="description" content="Encuentra tu hamburguesa preferida solo en Hamburguesas Burgety, ¡Entra ya!"/>
+
+  <!-- iPad de tercera generación con pantalla de alta resolución: -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/apple-icon-114x114.png"/>
+  <!-- iPhone con pantalla de alta resolución: -->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/apple-icon-114x114.png"/>
+  <!-- iPad de primera y segunda generación: -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icons/apple-icon-57x57.png"/>
+  <!-- Dispositivos iPhone sin pantalla Retina, iPod Touch y Android 2.1+: -->
+  <link rel="apple-touch-icon-precomposed" href="images/icons/apple-icon-60x60.png"/>
+  <!-- favicon básico -->
+  <link rel="shortcut icon" href="images/icons/favicon.ico"/>
+  <title>¡Burgety!</title>
 </head>
 <body>
     
