--- a/Javascript/ejemplo3/index.html
+++ b/Javascript/ejemplo3/index.html
@@ -9,6 +9,7 @@
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Clic para obtener un regalo:</h1>
+    <img src="../images/gift-icon.png" alt="regalo">
 </body>
 </html>
