--- a/Javascript/ejemplo9/index.html
+++ b/Javascript/ejemplo9/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo 2</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/foto-list.js" defer></script>
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Galería de animales</h1>
+    <section id="album-view">
+    </section>
+
+    <section id="modal-view" class="hidden">
+    </section>
 </body>
 </html>
