--- a/Javascript/ejemplo11/index.html
+++ b/Javascript/ejemplo11/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo 2</title>
+    <title>Ejemplo 11</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/foto-list.js" defer></script>
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Galería de animales</h1>
+    <section id="album-view">
+    </section>
+
+    <section id="modal-view" class="hidden">
+    </section>
 </body>
 </html>
